<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--now defined in gradle build types instead of here: string name="app_name">GoLive</string-->
    <string name="collision_alarm">Collision Alarm</string>
    <string name="user_current_activity">User current action</string>
    <string name="action_my_id">My ID</string>
    <string name="action_change_map">Change Map Type</string>
    <string name="action_clear_map">Clear Map</string>
    <string name="action_record">Record</string>
    <string name="action_reset_offsets">Reset Offsets</string>
    <string name="action_settings">Settings</string>
    <string name="action_test_warning">Test Warning</string>
    <string name="title_activity_alarm">Collision Alarm</string>
    <string name="alarm_stop">STOP ALARM</string>

    <!-- Messages -->
    <string name="image_view_for_tweening">Image View For Tweening</string>

    <string name="display_gps_status_enabled">GPS enabled/disabled?</string>
    <string name="display_gps_status">GPS status (nothing)</string>
    <string name="display_gps_latitude">latitude ...</string>
    <string name="display_gps_longitude">longitude ...</string>
    <string name="display_gps_accuracy">accuracy ...</string>
    <string name="display_gps_updated">last updated ...</string>
    <string name="display_speed">speed...</string>
    <string name="display_bearing">bearing...</string>
    <string name="display_altitude">altitude...</string>
    <string name="display_gps_extra"> </string>

    <string name="display_gsm_status_enabled">Network location enabled/disabled?</string>
    <string name="display_gsm_status">Network location status (nothing)</string>
    <string name="display_gsm_latitude">latitude ...</string>
    <string name="display_gsm_longitude">longitude ...</string>
    <string name="display_gsm_accuracy">accuracy ...</string>
    <string name="display_gsm_updated">last updated ...</string>
    <string name="display_gsm_extra"> </string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>


    <string name="activity_main_label_gps">GPS</string>
    <string name="activity_main_label_net">NET</string>
    <string name="activity_main_label_kal">KAL</string>
    <string name="activity_main_fmt_alt">Altitude: %s m</string>
    <string name="activity_main_action_settings">Location settings</string>
    <string name="title_activity_record">Record Event</string>



</resources>
